Fix warning flash message alignment

--- a/src/sass/components/_flash.scss
+++ b/src/sass/components/_flash.scss
@@ -83,8 +83,7 @@ div.flash,
   }
 }
 
-.nodata:not(:has(svg)),
-.warning {
+.nodata:not(:has(svg)) {
   padding-left: variables.$padding-large-horizontal;
   text-align: center;
 
